tests/baselines/reference/parserComputedPropertyName41.errors.txt
parserComputedPropertyName41.ts(2,5): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.


==== parserComputedPropertyName41.ts (1 errors) ====
    var v = {
        [0 in []]: true
        ~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
    }